tests/scan/fixtures/validation/negative/clean_cargo_clean_serializer/src/lib.rs
//! A clean Rust crate: clean_serializer.

pub fn hello() -> &'static str { "hello" }
